# AI-Chatbot

./: README.md
ai-chatbot/: .env.example  .gitignore  README.md  aerich.ini  main.py  pyproject.toml
ai-chatbot/apps/ai_agent/: models.py  routes.py  schema.py
ai-chatbot/apps/ai_agent/agent_builder/: agent.py  app.py
ai-chatbot/apps/ai_agent/data/: fewshot_prompts.txt  schema.txt  schema_collection_data.txt  schema_docs.py  table schema
ai-chatbot/apps/ai_agent/ejl_data/fewshot/: few_shot.json
ai-chatbot/apps/ai_agent/ejl_data/schema/: schema_data.txt
ai-chatbot/apps/ai_agent/middleware/: __init__.py  auth.py
ai-chatbot/apps/ai_agent/pipeline/: create_vectors.py  document_loader.py  embeddings.py  encoder.py  search.py  vector_store.py
ai-chatbot/apps/ai_agent/prompts/: prompts_v1.py
ai-chatbot/apps/ai_agent/services/: __init__.py  query_service.py
ai-chatbot/apps/ai_agent/utils/: __init__.py  query_validator.py
ai-chatbot/core/: config.py
ai-chatbot/src/ai_chatbot/: __init__.py
ai-chatbot/src/ai_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
